--- a/train_mask_detector.ipynb
+++ b/train_mask_detector.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1NQP64_UexslbKebyeGiFCdEC-CBPYyK8",
-      "authorship_tag": "ABX9TyP09nNvY81wewDXrIP99Htf",
+      "authorship_tag": "ABX9TyP6A/E7+1LYzy+Q4f94Sp0+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,43 +54,13 @@
         "import numpy as np\n",
         "import os"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FKjfWMY9h64Y",
-        "outputId": "7e80c4e4-6195-411c-95b2-22fa7979afd1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bNfCTgxths0x",
-        "outputId": "e2a60a34-c906-4937-adc7-5adf7430af9f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "bNfCTgxths0x"
       },
       "source": [
         "# initialize the initial learning rate, number of epochs to train for,\n",
@@ -102,25 +72,17 @@
         "DIRECTORY = r\"/content/drive/My Drive/Colab Notebooks/Face-Mask-Detection/dataset\"\n",
         "CATEGORIES = [\"with_mask\", \"without_mask\"]"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[INFO] loading images...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8FWAgHIGj3Wr",
-        "outputId": "f6c5a145-ea90-4d12-b911-301d22b5d972",
+        "outputId": "4bd98482-e6d0-4b85-b33d-17aa1bc5c14d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 88
         }
       },
       "source": [
@@ -141,7 +103,7 @@
         "    \tdata.append(image)\n",
         "    \tlabels.append(category)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,6 +111,14 @@
             "[INFO] loading images...\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/PIL/Image.py:932: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+            "  \"Palette images with Transparency expressed in bytes should be \"\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
@@ -169,7 +139,7 @@
         "(trainX, testX, trainY, testY) = train_test_split(data, labels,\n",
         "\ttest_size=0.20, stratify=labels, random_state=42)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,18 +158,13 @@
         "\thorizontal_flip=True,\n",
         "\tfill_mode=\"nearest\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u0evKcKqlMW_",
-        "outputId": "309c05f3-527d-4646-b937-55588d7ff600",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 88
-        }
+        "id": "u0evKcKqlMW_"
       },
       "source": [
         "# load the MobileNetV2 network, ensuring the head FC layer sets are\n",
@@ -207,18 +172,8 @@
         "baseModel = MobileNetV2(weights=\"imagenet\", include_top=False,\n",
         "input_tensor=Input(shape=(224, 224, 3)))"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:`input_shape` is undefined or non-square, or `rows` is not in [96, 128, 160, 192, 224]. Weights for input shape (224, 224) will be loaded as the default.\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v2/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224_no_top.h5\n",
-            "9412608/9406464 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -235,7 +190,7 @@
         "headModel = Dropout(0.5)(headModel)\n",
         "headModel = Dense(2, activation=\"softmax\")(headModel)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -248,22 +203,29 @@
         "# the actual model we will train)\n",
         "model = Model(inputs=baseModel.input, outputs=headModel)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lrq0YXcYhY8b"
+        "id": "hU2uZzc7mDDq"
       },
       "source": [
-        "\n",
-        "\n",
         "# loop over all layers in the base model and freeze them so they will\n",
         "# *not* be updated during the first training process\n",
         "for layer in baseModel.layers:\n",
-        "\tlayer.trainable = False\n",
-        "\n",
+        "\tlayer.trainable = False"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V1btULLKmfq-"
+      },
+      "source": [
         "# compile our model\n",
         "print(\"[INFO] compiling model...\")\n",
         "opt = Adam(lr=INIT_LR, decay=INIT_LR / EPOCHS)\n",
@@ -277,24 +239,51 @@
         "\tsteps_per_epoch=len(trainX) // BS,\n",
         "\tvalidation_data=(testX, testY),\n",
         "\tvalidation_steps=len(testX) // BS,\n",
-        "\tepochs=EPOCHS)\n",
-        "\n",
+        "\tepochs=EPOCHS)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W4Ju9x-Nodec"
+      },
+      "source": [
         "# make predictions on the testing set\n",
         "print(\"[INFO] evaluating network...\")\n",
         "predIdxs = model.predict(testX, batch_size=BS)\n",
-        "\n",
         "# for each image in the testing set we need to find the index of the\n",
         "# label with corresponding largest predicted probability\n",
         "predIdxs = np.argmax(predIdxs, axis=1)\n",
         "\n",
         "# show a nicely formatted classification report\n",
-        "print(classification_report(testY.argmax(axis=1), predIdxs,\n",
-        "\ttarget_names=lb.classes_))\n",
+        "print(classification_report(testY.argmax(axis=1), predIdxs, target_names=['with_mask']))\n",
         "\n",
         "# serialize the model to disk\n",
         "print(\"[INFO] saving mask detector model...\")\n",
-        "model.save(\"mask_detector.model\", save_format=\"h5\")\n",
-        "\n",
+        "model.save(\"mask_detector.model\", save_format=\"h5\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0yPJkiGIpAEq"
+      },
+      "source": [
+        "lb.classes_"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ETsBCJ8eo0Za"
+      },
+      "source": [
         "# plot the training loss and accuracy\n",
         "N = EPOCHS\n",
         "plt.style.use(\"ggplot\")\n",
